# computer

./: .gitignore  CMakeLists.txt
lib/libcom/: CMakeLists.txt  Daemon.cpp  Daemon.h  DaemonHandler.cpp  DaemonHandler.h
src/computer/: CMakeLists.txt  Daemon.cpp  Daemon.h  Version.h  Version.h.in  main.cpp
